Underline header-hyperlinks functioning correctly but wrong colour

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -147,28 +147,7 @@ body {
     top: -100px; // same as header height. use variables in LESS/SASS
 }
 
-.sliding-middle-out {
-	display: inline-block;
-	position: relative;
-	padding-bottom: 3px;
-}
-.sliding-middle-out:after {
-	content: '';
-	display: block;
-	margin: auto;
-	height: 3px;
-	width: 0px;
-	background: transparent;
-	transition: width .5s ease, background-color .5s ease;
-}
-.sliding-middle-out:hover:after {
-	width: 100%;
-	background: blue;
-}
-
-
 header {
-    //position: absolute; 
     position: fixed;
     transition: top 0.2s ease-in-out;
     top: 0;
@@ -202,11 +181,29 @@ header {
         display: block;
         color: $base-color;
         padding: 15px;
+        position: relative;
+
+        &:after {
+         content: '';
+	display: block;
+	margin: auto;
+	height: 3px;
+	width: 0px;
+	background: transparent;
+	transition: width .5s ease, background-color .5s ease;   
+        }
+
       
         &:hover {
+            
+            &:after {
+            width: 100%;
+	       background: blue;
+            }
+            
             color: $base-color-hover;
             text-decoration: none;
-            background: #eee;
+            //background: #eee; //Adds a grey bg when hovered over
             border-radius: 4px;
                        
         }
